# Tetanus

./: .gitattributes  Cargo.toml  LICENSE.md  analytics.js  bower.json  index.html  params.json  styles.css
articles/: index.html
bower_components/parallax-container/: .bower.json
bower_components/perfect-scrollbar/: .bower.json
bower_components/rrssb/: .bower.json
contact/: index.html
documentation/: index.html  styles.css
res/: barbwire.txt  bloody.txt  peak_slant.txt  poison.txt  razor.txt
src/: lib.rs
src/escalation/: mod.rs
src/execution/: download_execute.rs  execute_powershell.rs  mod.rs
src/exfiltration/: mod.rs  pastebin.rs
src/recon/: mod.rs
