[package]
name = "Tetanus"
version = "0.0.1"
authors = ["LogoiLab <LogoiLab@github.com>"]
publish = false

[dependencies]
base64 = "0.1.1"
hyper = "0.9"
num = "0.1.32"
os_type="0.5.0"
pnet = "0.9.0"
regex = "0.1.69"
serde = "0.7.5"
serde_json = "0.7.0"
tempdir = "0.3.4"

[bin]
name = "Tetanus"
path = "src/main.rs"

[lib]
name = "libtetanus"
path = "src/lib.rs"
